# mc_server

./: README  README.md
mc_echo/: README
mc_echo/0.9/: AUTHORS  COPYING  INSTALL  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
mc_echo/0.9/autom4te.cache/: output.1  requests  traces.0  traces.1
mc_echo/0.9/doc/: Makefile  Makefile.in  mc_echo.8  mc_echo.conf
mc_echo/0.9/src/: Makefile.am  configure.c  interface.c  main.c  server.c  server.h  sig.c
mc_echo/0.9/src/.deps/: configure.Po  interface.Po  main.Po  server.Po  sig.Po
mc_echo/1.0/: COPYING  NEWS  README  config.h  config.h.in  configure.ac  configure.scan  missing
mc_echo/1.0/autom4te.cache/: output.0  requests  traces.0  traces.1
mc_echo/1.0/doc/: Makefile.am  mc_echo.8  mc_echo.conf
mc_echo/1.0/src/: Makefile.am  conf_lex.l  conf_yacc.y  configure.c  configure.h  event.h  interface.c  main.c  mc.h  server.c  server.h  sig.c
mc_echo/1.0/src/.deps/: conf_lex.Po  conf_yacc.Po  configure.Po  interface.Po  main.Po  server.Po  sig.Po
